--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "lib/index.js",
   "scripts": {
     "compile": "babel -d lib/ src/",
-    "prepublish": "npm run compile",
     "test": "npm run compile && mocha --compilers js:babel-core/register"
+    "publish": "npm publish",
+    "prepublish": "npm run compile"
   },
   "repository": {
     "type": "git",
